clear button visibility fixed, citation at interview page, event view page component improved

--- a/webapp/src/app/interview-page/interview-page.component.scss
+++ b/webapp/src/app/interview-page/interview-page.component.scss
@@ -1107,6 +1107,11 @@ textarea.w-select {
   .question-list .answer {
     font-size: 1rem;
   }
+  .citation {
+    .bold {
+      color: #ff8a1e;
+    }
+  }
   .metadata {
     padding-bottom: 15px;
     .bold {
